flags for benches